--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/sapr-bntu/Pr51">View on GitHub</a>
+          <a id="forkme_banner" https://github.com/sapr-bntu/Pr51/tree/gh-pages">View on GitHub</a>
 
           <h1 id="project_title">Pr51</h1>
           <h2 id="project_tagline">pr51,bntu-sapr,imageviewer</h2>
@@ -33,7 +33,7 @@
       <section id="main_content" class="inner">
         <h1>Welcome to <strong>Pr51</strong> Official page.</h1>
 
-<h2>The <strong>Pr51</strong> is the the most popular image viewer with <em>GNU GPL License.</em>
+<h2>The <strong>Pr51</strong> is the the most popular image viewer with GNU GPL License.
 </h2>
 
 <h3>Soon our product get ready to start on Android!</h3>
@@ -44,16 +44,21 @@
 
 <h3>Main functionality</h3>
 
-<p>With <strong>Pr51</strong> You can:
-1. Open and view folders with images.
-2. Set tags and rate your favourite pictures or photo.
-3. Friendly interface and great usability satisfy any person, even most versed. </p>
+<p>With <strong>Pr51</strong> You can:<br>
+1. Open and view folders with images.<br>
+2. Set tags and rate your favourite pictures or photo.<br>
+3. Friendly interface and great usability satisfy any person, even most versed.<br> </p>
 
-<p>Download <strong>Pr51</strong> now! (see download link on top).</p>
+<p><a href="https://github.com/downloads/sapr-bntu/Pr51/SetupProject.msi">Download</a> <strong>Pr51</strong> now! (for Windows)</p>
+<p> And we have a <a href="https://github.com/downloads/sapr-bntu/Pr51/QmlViewer.msi">Qml version</a> of our great viewer.
 
 <h3>Authors</h3>
 
-<p>In 2011, Igor Jakimush (<a href="https://github.com/qwe37" class="user-mention">@qwe37</a>), Anna Kuznecova (<a href="https://github.com/Mord-Syth" class="user-mention">@Mord-Syth</a>), Evgeny Zavadski (<a href="https://github.com/smoker-by" class="user-mention">@smoker-by</a>) and Dmitry Semashko(<a href="https://github.com/Frigik" class="user-mention">@Frigik</a>) founded Pr51.
+<p>In 2011, Igor Jakimush (<a href="https://github.com/qwe37" class="user-mention">@qwe37</a>), Anna Kuznecova (<a href="https://github.com/Mord-Syth" 
+
+class="user-mention">@Mord-Syth</a>), Evgeny Zavadski (<a href="https://github.com/smoker-by" class="user-mention">@smoker-by</a>) and Dmitry Semashko(<a 
+
+href="https://github.com/Frigik" class="user-mention">@Frigik</a>) founded Pr51.<br>
 Special thanks to: Alexandr Galko (<a href="https://github.com/g-ferz" class="user-mention">@g-ferz</a>).</p>
       </section>
     </div>
