--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" "https://github.com/sapr-bntu/Pr51/tree/gh-pages">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/sapr-bntu/Pr51/tree/gh-pages">View on GitHub</a>
 
           <h1 id="project_title">Pr51</h1>
           <h2 id="project_tagline">pr51,bntu-sapr,imageviewer</h2>
