Added *.apk download&Ministro libriraies.

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 1. Open and view folders with images.<br>
 2. Set tags and rate your favourite pictures or photo.<br>
 3. Friendly interface and great usability satisfy any person, even most versed.<br> </p>
-
+<h3>I Want To Use it!</h3><br>
 <p><a href="https://github.com/downloads/sapr-bntu/Pr51/SetupProject.msi">Download</a> <strong>Pr51</strong> now! (for Windows)</p>
-<p> And we have a <a href="https://github.com/downloads/sapr-bntu/Pr51/QmlViewer.msi">Qml version</a> of our great viewer.
-
+<p> And we have a <a href="https://github.com/downloads/sapr-bntu/Pr51/QmlViewer.msi">Qml version</a> of our great viewer.<br>
+Also You can download <a href="https://github.com/sapr-bntu/Pr51/AndroidViewer.apk/qr_code">Android</a> version. Have troubles? <a href="https://github.com/sapr-bntu/Pr51/Ministro%20II.apk/qr_code">You welcome</a><br>
 <h3>Authors</h3>
 
 <p>In 2011, Igor Jakimush (<a href="https://github.com/qwe37" class="user-mention">@qwe37</a>), Anna Kuznecova (<a href="https://github.com/Mord-Syth" 
